  * Changed the lsl.reader.ldp.DRXFile class to deal with small (<50 frame) gaps in DRX files
  * Changed the lsl.reader.cor module to ensure the YX is valid for the autocorrelations
  * Worked on reduced the memory usage of the FITS-IDI writer
  * Adjusted the TBW duration calculation to reflect that DP can output TBW twice as fast now

1.2.3
  * Fixed a problem with the conditional dependencies in setup.py for older versions of setuptools
  * Increased the default ring segment count for lsl.reader.buffer.DRXFrameBuffer to better deal with LWA-SV data
  * Increased the number of frames examined by lsl.reader.ldp.DRXFile to better deal with LWA-SV data

1.2.2
  * Bumped the minimum PyFITS version to 3.2
  * Fixed a bug in setup.py that causes it to crash when 'pkg-config' is not installed
  * Fixed a memory leak in the new, more flexible lsl.reader modules
  * Fixed a problem with the data ordering in the lsl.writer modules when a high time resolution (<~2 ms) is used
  * Fixed a bug in the DR spectrometer reader which incorrectly mapped tuning 2, Stokes I for IQUV-mode observations
  * Fixed a bug in the new measurement set writer
  * Added multiple IF support to the FITS IDI writer and reader
  * Added multiple IF/spectral window support to the CASA measurement set writer
  * Worked on making the lsl.writer.fitsidi and lsl.writer.measurementset modules more robust
  * Fixed a bugs in the VDIF reader and writer
  * Fixed a few bugs in the scripts that ship with LSL
  * Added unittest2 as an extra dependency for Python 2.6

1.2.1
  * Added a new lsl.common.color module to help bring color to ANSI terminals
  * Small fix to lsl.imaging.utils.plotGriddedImage() to get the image scale correct for non-all-sky images
  * Finished moving imageIDI.py over to using the lsl.imaging modules
  * Changed the default FFT length in correlateTBN.py to 16 channels