@@ -127,6 +127,16 @@ class sdf_adp_tests(unittest.TestCase):
         s2 = "UTC 2013-01-08 19:35:28.994"
         self.assertEqual(sdfADP.parse_time(s1, station=lwasv), sdfADP.parse_time(s2))
         
+    def test_flat_projects(self):
+        """Test single session/observations SDFs."""
+        
+        obs = sdfADP.Observer('Test Observer', 99)
+        targ = sdfADP.DRX('Target', 'Target', '2019/1/1 00:00:00', '00:00:10', 0.0, 90.0, 40e6, 50e6, 7, MaxSNR=False)
+        sess = sdfADP.Session('Test Session', 1, observations=targ)
+        sess.set_drx_beam(1)
+        proj = sdfADP.Project(obs, 'Test Project', 'COMTST', sessions=sess)
+        out = proj.render()
+        
     ### TBW ###
     
     def test_tbw_parse(self):
